# Project-Syntropia

./: .SRCINFO  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  blockchain_monitoring_plan.md  config.toml.example  install.sh  plan.md  plan2.md  pyproject.toml  requirements.txt  setup.py  tasks.md  tasks2.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_agent_proposal.md
agents/binary_analyzer/: agent.py  manifest.json
agents/math/add/: agent.py
agents/reasoning/qwen_0.5b/: manifest.json
docs/: midi_sync.md  user_guide.md
docs/architecture/: consensus.md  container_hierarchy.md  ephemeral_storage.md  model_selection.md  tui_dashboard.md
reference/: README.md  binary_analyzer_plan.md  p2p_discovery.md  tasks.md
reference/agents/math/add/: manifest.json
reference/agents/reasoning/qwen_0.5b/: agent.py
src/: main.py  reaper_daemon.py
src/syntropia/: __init__.py  blockchain.py  cachy_host.py  constitution.py  container.py  crypto.py  engine.py  evolution.py  gossip.py  healer.py  orchestrator.py  registry.py  thor_hammer.py  thors_hammer.py  vaporization.py
systemd/: syntropia-reaper.service  syntropia.service
tests/: test_binary_analyzer.py  test_blockchain.py  test_cachy_host.py  test_constitution.py  test_container.py  test_core_engine.py  test_crypto.py  test_evolution.py  test_gossip.py  test_healer.py  test_integration.py  test_vaporization.py
