[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntropia"
version = "0.1.0"
description = "The Living Computer—P2P agent swarm synchronized via MIDI and Torrent"
readme = "README.md"
authors = [
    { name = "Project Syntropia Team", email = "hello@project-syntropia.io" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.2.0",    # Lightweight model inference (CPU)
    "libtorrent>=2.0.0",           # P2P Torrent integration
    "mido>=1.3.0",                 # MIDI interface for clock sync
    "python-rtmidi>=1.5.0",        # Low-latency MIDI backend for mido
    "psutil>=5.9.0",               # Hardware probing (RAM, CPU)
    "pydantic>=2.0.0",             # Agent manifest validation
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[project.scripts]
syntropia = "src.main:cli"
