[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntropia"
version = "0.1.0"
description = "Syntropia: A performance-tuned AI container overlay daemon for CachyOS"
readme = "README.md"
authors = [
    { name = "Project Syntropia Team", email = "hello@project-syntropia.io" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",               # Hardware probing (RAM, CPU, metrics)
    "pydantic>=2.0.0",             # Agent manifest validation
    "cryptography>=41.0.0",        # HD Key derivation and signatures
    "toml>=0.10.2",                # Configuration file parsing fallback
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]

[project.scripts]
syntropia = "main:main"
